[gd_scene load_steps=15 format=2]

[ext_resource path="res://MAIN/sprites/helicopters/heli2.png" type="Texture" id=1]
[ext_resource path="res://Drone.gd" type="Script" id=2]
[ext_resource path="res://Drone_control.tscn" type="PackedScene" id=3]
[ext_resource path="res://MAIN/sprites/other/glassPanel_projection.png" type="Texture" id=4]
[ext_resource path="res://MAIN/sprites/other/barHorizontal_white_mid 200.png" type="Texture" id=5]
[ext_resource path="res://MAIN/Bubble Bobble.otf" type="DynamicFontData" id=6]
[ext_resource path="res://MAIN/sprites/explosion effect/bang.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 46.9413
height = 146.711

[sub_resource type="CircleShape2D" id=2]
radius = 688.427

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 100, 100 )
margin_left = 5.0
margin_right = 5.0
modulate_color = Color( 0.027451, 0.027451, 0.027451, 1 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 200, 26 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 200, 26 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 200, 26 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 6 )

[node name="Drone" type="RigidBody2D"]
collision_layer = 0
collision_mask = 2147483649
gravity_scale = 0.0
script = ExtResource( 2 )
not_selected = Color( 0.384314, 0.384314, 0.384314, 1 )
selected = Color( 0.105882, 0.72549, 1, 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.52588e-05, 0 )
scale = Vector2( -0.5, 0.587 )
texture = ExtResource( 1 )

[node name="BulletPoint" type="Node2D" parent="Sprite"]
position = Vector2( -281.186, 112.88 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="EnemyDetector" type="Area2D" parent="."]
rotation = 1.49012e-08
collision_layer = 0
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( -4.42671, 0.780533 )
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Drone_control" parent="CanvasLayer" instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0.701961 )
position = Vector2( 244, 429 )
scale = Vector2( 0.7, 0.7 )

[node name="shootbutton" type="TextureButton" parent="CanvasLayer"]
margin_left = 1062.0
margin_top = 471.0
margin_right = 1158.0
margin_bottom = 567.0
toggle_mode = true
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_left = 507.0
margin_top = 95.0
margin_right = 927.0
margin_bottom = 189.0
rect_scale = Vector2( 0.8, 0.8 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Auto" type="Button" parent="CanvasLayer/Panel"]
self_modulate = Color( 0.32549, 0.32549, 0.32549, 1 )
margin_left = 14.4258
margin_top = 9.99999
margin_right = 134.426
margin_bottom = 80.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "AUTO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="remove" type="Button" parent="CanvasLayer/Panel"]
self_modulate = Color( 0.32549, 0.32549, 0.32549, 1 )
margin_left = 152.373
margin_top = 10.0
margin_right = 272.373
margin_bottom = 80.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "REMOVE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="control" type="Button" parent="CanvasLayer/Panel"]
self_modulate = Color( 0.32549, 0.32549, 0.32549, 1 )
margin_left = 289.733
margin_top = 10.0
margin_right = 409.733
margin_bottom = 80.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "CONTROL"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="body_exited" from="EnemyDetector" to="." method="_on_EnemyDetector_body_exited"]
[connection signal="pressed" from="CanvasLayer/shootbutton" to="." method="_on_shootbutton_pressed"]
[connection signal="toggled" from="CanvasLayer/shootbutton" to="." method="_on_shootbutton_toggled"]
[connection signal="pressed" from="CanvasLayer/Panel/Auto" to="." method="_on_Auto_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/remove" to="." method="_on_remove_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/control" to="." method="_on_control_pressed"]
